# galileo-python

./: .gitignore  .pre-commit-config.yaml  100_PERCENT_VERIFICATION.md  AGENTS.md  AUDIO_SUPPORT.md  CHANGELOG.md  CONTRIBUTING.md  GROUND_TRUTH_FIX_SUMMARY.md  README.md  README_SPLUNK_AGENT_OBS.md  README_SPLUNK_AO.md  check.txt  codecov.yml  contributing.md  debug_ssl.py  notify-e2e-on-release.yaml  openapi-client-config.yaml  openapi.yaml  pydoc-markdown-handlers.yml  pydoc-markdown.yml  pyproject.toml  pyrightconfig.json  tasks.py  test_sdk_trigger_e2e.py
galileo-a2a/: README.md  pyproject.toml
galileo-a2a/examples/: .env.example  two_agent_demo.py
galileo-a2a/src/galileo_a2a/: __init__.py  _client_patches.py  _constants.py  _context.py  _message_utils.py  _server_patches.py  _spans.py  instrumentor.py
galileo-a2a/tests/: conftest.py  test_client_patches.py  test_context.py  test_instrumentor.py  test_server_patches.py  test_spans.py
galileo-adk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
galileo-adk/src/galileo_adk/: __init__.py  callback.py  data_converters.py  decorator.py  observer.py  plugin.py  span_manager.py  span_tracker.py  trace_builder.py  types.py
galileo-adk/tests/: __init__.py  conftest.py  mocks.py  test_callback.py  test_data_converters.py  test_multi_plugin.py  test_observer.py  test_plugin.py  test_retriever.py  test_span_manager.py  test_span_tracker.py  test_status_code.py  test_trace_builder.py
python/: .env.example  .gitignore  README.md  main.py  mkdocs.yml  openapi-client-config.yaml  openapi.yaml  pyproject.toml  tasks.py  wrangler.toml
python/.github/workflows/: ci.yaml
python/galileo/: README_API_CLIENT.md  __init__.py  api_client.py  base.py  client.py  datasets.py  decorator.py  experiments.py  log_streams.py  logger.py  openai.py  projects.py
python/galileo/api/api_keys/: delete_api_key_users_api_keys_api_key_id_delete.py
python/galileo/api/data/: get_chain_as_columns_projects_project_id_runs_run_id_prompts_rows_chains_chain_id_columnar_get.py  get_scorer_versions_scorers_scorer_id_versions_get.py
python/galileo/api/edits/: delete_edit_edits_edit_id_delete.py  export_edits_remote_edits_export_remote_post.py
python/galileo/api/embeddings/: get_point_embeddings_projects_project_id_runs_run_id_split_split_embeddings_point_post.py  has_embeddings_projects_project_id_runs_run_id_split_split_embeddings_available_get.py
python/galileo/api/experiment/: list_experiments_v2_projects_project_id_experiments_get.py  update_experiment_v2_projects_project_id_experiments_experiment_id_put.py
python/galileo/api/export/: export_data_remote_projects_project_id_runs_run_id_split_split_export_remote_post.py
python/galileo/api/feedback/: apply_bulk_feedback_projects_project_id_runs_run_id_ratings_post.py  delete_feedback_rating_projects_project_id_runs_run_id_feedback_templates_template_id_index_index_rating_delete.py  update_feedback_template_projects_project_id_feedback_templates_template_id_patch.py
python/galileo/api/groups/: delete_group_groups_group_id_delete.py  get_group_groups_group_id_get.py  list_group_members_groups_group_id_members_get.py
python/galileo/api/insights/: dismiss_alert_projects_project_id_runs_run_id_split_split_insights_alerts_alert_id_delete.py  get_cbo_clusters_for_split_projects_project_id_runs_run_id_split_split_insights_cbo_clusters_post.py  get_insight_ids_projects_project_id_runs_run_id_split_split_insights_ids_post.py
python/galileo/api/integrations/: create_or_update_integration_integrations_aws_sagemaker_put.py  delete_integration_integrations_name_delete.py  export_to_databricks_unity_catalog_integrations_databricks_unity_catalog_export_post.py
python/galileo/api/models/: get_all_models_for_project_projects_project_id_models_all_get.py  get_model_by_run_projects_project_id_runs_run_id_model_get.py  upload_model_projects_project_id_runs_run_id_model_post.py
python/galileo/api/observe/: get_workflow_count_projects_project_id_observe_workflows_count_post.py  get_workflows_observe_projects_project_id_workflows_post.py
python/galileo/api/project_settings/: get_evaluate_settings_projects_project_id_settings_evaluate_get.py  get_scorers_config_projects_project_id_settings_scorers_config_get.py  (+1 more)
python/galileo/constants/: __init__.py  routes.py
python/galileo/models/: __init__.py  alert.py  anthropic_integration_extra_type_0.py  aws_sage_maker_integration.py  bar_chart.py  base_aws_integration_create_token.py  base_scorer.py  base_scorer_aggregates_type_0.py  body_create_or_update_registered_scorers_put.py  bulk_feedback_rating_status.py  changes.py  chunk_attribution_utilization_scorer_type.py  composite_project_settings_metric_weights_configuration_type_0.py  create_api_key_response.py  customized_chunk_attribution_utilization_gpt_scorer_extra_type_0.py  customized_completeness_gpt_scorer.py  customized_ground_truth_adherence_gpt_scorer.py  customized_instruction_adherence_gpt_scorer.py  customized_scorer_name.py  databricks_edit_export_response.py  databricks_export_request.py  databricks_integration.py  databricks_unity_catalog_edit_export_request.py  dataset_append_row.py  dataset_content.py  dataset_content_filter_operator.py  dataset_format.py  dataset_rename_column.py  dataset_row.py  delete_runs_response.py  distribution.py  document_metadata.py  edit_create_request.py  edit_export_request_col_mapping_type_0.py  edit_review_db.py  edit_row_data_meta_type_0.py  embedding_request.py  evaluate_run_request.py  export_request_col_mapping_type_0.py  filter_percentage_request.py  (+80 more)
python/galileo/resources/: README.md  __init__.py
python/galileo/resources/models/: agent_step.py  (+525 more)
python/galileo/schema/: trace.py
python/galileo/utils/: __init__.py  api_client.py  core_api_client.py  request.py  serialization.py  singleton.py
python/scripts/: auto-generate-api-client.sh  format.sh  import-openapi-yaml.sh  type-check.sh
python/tests/: test_decorator.py  test_logger.py
python/tests/testutils/: setup.py
python/tests/utils/: setup.py  test_serialization.py
(+3592 files in other folders)
