[project]
name = "galileo"
version = "1.8.0"
description = "Client library for the Galileo platform."
authors = [{ name = "Galileo Technologies Inc.", email = "team@galileo.ai" }]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = "^3.9,<3.14"
pydantic = "^2.11.7"
pyjwt = "^2.8.0"
wrapt = "^1.14"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"
langchain-core = { version = "^0.3.61", optional = true }
openai = { version = "<1.94.0", optional = true }
openai-agents = { version = "<0.0.18", optional = true }

galileo-core = "~=3.55.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
coverage = "^7.9.2"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.7.0"
pytest-socket = "^0.7"
pytest-asyncio = "^1.0.0"
requests-mock = "^1.11.0"
galileo-core = { extras = ["testing"], version = "~=3.55.0" }

pytest-env = "^1.1.5"
langchain-core = "^0.3.61"
pytest-sugar = "^1.0.0"
vcrpy = "^7.0.0"
time-machine = "^2.16.0"  # freezegun causes problems with pydantic model validations


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.16.0"
openai = "^1.93.0"
codeflash = ">=0.12.3"
ruff = "^0.12.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.6.15"
mkdocstrings = "^0.29"
mkdocstrings-python = "^1.16.12"
griffe-fieldz = "^0.2.0"



[tool.pytest.ini_options]
pythonpath = ["./src/"]
env = [
    "GALILEO_CONSOLE_URL=http://localtest:8088",
    "GALILEO_API_KEY=api-1234567890",
    "GALILEO_PROJECT=test-project",
    "GALILEO_LOG_STREAM=test-log-stream",
]
addopts = [
    # Run tests in parallel.
    "-n",
    "auto",
    # Show local variables in tracebacks.
    "--showlocals",
    # Show extra test summary info as specified by chars.
    "-o",
    "console_output_style=progress",
    # Disable warnings.
    "--disable-warnings",
    # Show slowest 10 test durations.
    "--durations=10",
    # Disable internet access.
    "--disable-socket",
    # Enable local socket access.
    "--allow-hosts=127.0.0.1,localhost",
]
asyncio_default_fixture_loop_scope = "function"

# Linters and formatters.

[tool.ruff]
line-length = 120
fix = true
src = ["src"]
unsafe-fixes = true
target-version = "py39"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "ASYNC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["galileo_core"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.docformatter]
style = "numpy"
recursive = true
wrap-summaries = 120
wrap-descriptions = 120

[tool.mypy]
mypy_path = ["src"]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]
ignore_missing_imports = true
no_implicit_optional = false
follow_imports = "skip"
plugins = ["pydantic.mypy"]

# Release.

[tool.semantic_release]
version_variables = ["src/galileo/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
commit_message = "chore(release): v{version}\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.commit_parser_options]
# Release patch version on these tags,
# https://python-semantic-release.readthedocs.io/en/latest/configuration.html#commit-parser-options-dict-str-any
patch_tags = ["fix", "perf", "chore", "docs", "style", "refactor"]



[tool.coverage.run]
omit = [
    # ignore autogenerated code
    "./src/galileo/resources/*",
]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "./src/galileo"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
disable-telemetry = false
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]

[project.optional-dependencies]
langchain = ["langchain-core"]
openai = ["openai", "packaging (>=24.2,<25.0)", "openai-agents"]
all = ["langchain-core", "openai"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Test.
